--- a/app/src/main/res/layout/activity_verloren.xml
+++ b/app/src/main/res/layout/activity_verloren.xml
@@ -4,19 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".Verloren">
+
+    <TextView
+        android:id="@+id/tv_verloren"
+        android:layout_width="400dp"
+        android:layout_height="288dp"
+        android:layout_marginBottom="19dp"
+        android:gravity="center"
+        android:text="@string/tv_verloren"
+        android:textColor="@android:color/background_dark"
+        android:textSize="45sp"
+        app:fontFamily="@font/geschwungen"
+        app:layout_constraintBottom_toTopOf="@+id/iv_klabautermann"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/bt_nochmalQuiz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Probiers nochmal"
+        android:layout_width="162dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="68dp"
+        android:background="@color/colorButton"
+        android:text="@string/bt_verloren"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_klabautermann"
+        app:layout_constraintVertical_bias="0.481" />
+
+    <ImageView
+        android:id="@+id/iv_klabautermann"
+        android:layout_width="354dp"
+        android:layout_height="260dp"
+        android:layout_marginTop="320dp"
+        android:layout_marginBottom="38dp"
+        android:contentDescription="@string/desc"
+        app:layout_constraintBottom_toTopOf="@+id/bt_nochmalQuiz"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.789" />
-
+        app:srcCompat="@drawable/glasvollhirn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
