--- a/app/src/main/res/layout/activity_crew.xml
+++ b/app/src/main/res/layout/activity_crew.xml
@@ -6,10 +6,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorBackground"
     tools:ignore="ContentDescription"
     tools:context=".Crew">
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/colorBackground"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/ib_backCrew"
@@ -46,40 +55,37 @@
         android:id="@+id/iv_bild1"
         android:layout_width="83dp"
         android:layout_height="128dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
         android:layout_marginTop="60dp"
         app:layout_constraintBottom_toTopOf="@+id/iv_bild3"
-        app:layout_constraintEnd_toStartOf="@+id/tv_name1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.048"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/pirat3" />
+        app:srcCompat="@drawable/pirat3" />
 
     <ImageView
         android:id="@+id/iv_bild2"
         android:layout_width="84dp"
         android:layout_height="126dp"
         android:layout_marginTop="200dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginBottom="84dp"
         app:layout_constraintBottom_toTopOf="@+id/iv_bild4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_name2"
+        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/piratin1" />
+        app:srcCompat="@drawable/piratin1" />
 
     <ImageView
         android:id="@+id/iv_bild3"
         android:layout_width="83dp"
         android:layout_height="128dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         app:layout_constraintBottom_toTopOf="@+id/iv_bild5"
-        app:layout_constraintEnd_toStartOf="@+id/tv_name3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.085"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bild1"
-        tools:srcCompat="@drawable/pirat1" />
+        app:srcCompat="@drawable/pirat1" />
 
     <ImageView
         android:id="@+id/iv_bild4"
@@ -87,27 +93,25 @@
         android:layout_height="128dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginBottom="233dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_name4"
+        app:layout_constraintHorizontal_bias="0.99"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bild2"
-        tools:srcCompat="@drawable/sparrow" />
+        app:srcCompat="@drawable/sparrow" />
 
     <ImageView
         android:id="@+id/iv_bild5"
         android:layout_width="83dp"
         android:layout_height="128dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_name5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.048"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_bild3"
-        tools:srcCompat="@drawable/piratenbraut" />
+        app:srcCompat="@drawable/piratenbraut" />
 
     <TextView
         android:id="@+id/tv_name1"
@@ -141,6 +145,7 @@
         app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toTopOf="@+id/tv_name4"
         app:layout_constraintEnd_toStartOf="@+id/iv_bild2"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_einstellungen" />
 
@@ -205,8 +210,10 @@
         android:layout_marginRight="146dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintHorizontal_bias="0.238"
         app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@drawable/glasvollhirn" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/glasvollhirn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
