--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -6,26 +6,57 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorBackground"
-    android:padding="16dp"
+    android:padding="0dp"
     tools:context=".Quiz">
 
 
-    <ImageButton
-        android:id="@+id/ib_backQuiz"
-        android:layout_width="59dp"
-        android:layout_height="58dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_quiz_header"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="-9dp"
-        android:layout_marginLeft="-9dp"
-        android:layout_marginTop="-11dp"
-        android:layout_marginEnd="340dp"
-        android:layout_marginRight="354dp"
-        android:background="@null"
-        app:srcCompat="@mipmap/ic_backbutton_foreground" />
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:minHeight="180dp">
+
+        <ImageButton
+            android:id="@+id/ib_backQuiz"
+            android:layout_width="59dp"
+            android:layout_height="58dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginEnd="43dp"
+            android:layout_marginRight="43dp"
+            android:layout_marginBottom="103dp"
+            android:background="@null"
+            android:contentDescription="@string/desc"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@mipmap/ic_backbutton_foreground" />
+
+        <TextView
+            android:id="@+id/tv_Score"
+            android:layout_width="125dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.929"
+            app:layout_constraintStart_toEndOf="@+id/ib_backSeekarte"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.428" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <TextView
@@ -90,13 +121,4 @@
         android:layout_marginTop="109dp"
         android:text="Confirm" />
 
-    <TextView
-        android:id="@+id/tv_Score"
-        android:layout_width="125dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
-        android:text="TextView" />
-</RelativeLayout>
+ </RelativeLayout>
