--- a/app/src/main/res/layout/activity_seekarte.xml
+++ b/app/src/main/res/layout/activity_seekarte.xml
@@ -163,6 +163,29 @@
                 app:srcCompat="@drawable/insel4" />
 
             <ImageButton
+                android:id="@+id/ib_insel_datentypen_grau"
+                android:layout_width="140dp"
+                android:layout_height="119dp"
+                android:layout_marginStart="252dp"
+                android:layout_marginLeft="252dp"
+                android:layout_marginTop="120dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:contentDescription="@string/desc"
+                android:padding="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toTopOf="@+id/tv_datentypen"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.555"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
+                app:srcCompat="@drawable/inselgrau_links" />
+
+            <ImageButton
                 android:id="@+id/ib_insel_entscheidungen"
                 android:layout_width="140dp"
                 android:layout_height="119dp"
@@ -181,6 +204,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ib_insel_grundlagen"
                 app:srcCompat="@drawable/insel3" />
+            <ImageButton
+                android:id="@+id/ib_insel_entscheidungen_grau"
+                android:layout_width="140dp"
+                android:layout_height="119dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="170dp"
+                android:layout_marginEnd="252dp"
+                android:layout_marginRight="252dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:contentDescription="@string/desc"
+                android:padding="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ib_insel_grundlagen"
+                app:srcCompat="@drawable/inselgrau_rechts" />
 
             <ImageButton
                 android:id="@+id/ib_insel_schleifen"
@@ -202,6 +244,26 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_datentypen"
                 app:srcCompat="@drawable/insel4" />
+            <ImageButton
+                android:id="@+id/ib_insel_schleifen_grau"
+                android:layout_width="140dp"
+                android:layout_height="119dp"
+                android:layout_marginStart="252dp"
+                android:layout_marginLeft="252dp"
+                android:layout_marginTop="170dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:contentDescription="@string/desc"
+                android:padding="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.142"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_datentypen"
+                app:srcCompat="@drawable/inselgrau_links" />
 
 
             <ImageButton
@@ -224,6 +286,26 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ib_insel_entscheidungen"
                 app:srcCompat="@drawable/insel3" />
+            <ImageButton
+                android:id="@+id/ib_insel_funktionen_grau"
+                android:layout_width="140dp"
+                android:layout_height="119dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="170dp"
+                android:layout_marginEnd="252dp"
+                android:layout_marginRight="252dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:contentDescription="@string/desc"
+                android:padding="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ib_insel_entscheidungen"
+                app:srcCompat="@drawable/inselgrau_rechts" />
 
             <ImageButton
                 android:id="@+id/ib_insel_arrays"
@@ -245,6 +327,27 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ib_insel_schleifen"
                 app:srcCompat="@drawable/insel4" />
+            <ImageButton
+                android:id="@+id/ib_insel_arrays_grau"
+                android:layout_width="140dp"
+                android:layout_height="119dp"
+                android:layout_marginStart="252dp"
+                android:layout_marginLeft="252dp"
+                android:layout_marginTop="170dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:contentDescription="@string/desc"
+                android:padding="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.142"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ib_insel_schleifen"
+                app:srcCompat="@drawable/inselgrau_links" />
+
 
             <ImageButton
                 android:id="@+id/ib_insel_variablen"
@@ -266,6 +369,26 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ib_insel_funktionen"
                 app:srcCompat="@drawable/insel3" />
+            <ImageButton
+                android:id="@+id/ib_insel_variablen_grau"
+                android:layout_width="140dp"
+                android:layout_height="119dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="170dp"
+                android:layout_marginEnd="252dp"
+                android:layout_marginRight="252dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:contentDescription="@string/desc"
+                android:padding="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ib_insel_funktionen"
+                app:srcCompat="@drawable/inselgrau_rechts" />
 
 
             <ImageButton
@@ -289,6 +412,27 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ib_insel_arrays"
                 app:srcCompat="@drawable/insel4" />
+            <ImageButton
+                android:id="@+id/ib_insel_praeprozessor_grau"
+                android:layout_width="140dp"
+                android:layout_height="119dp"
+                android:layout_marginStart="252dp"
+                android:layout_marginLeft="252dp"
+                android:layout_marginTop="170dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:background="@null"
+                android:contentDescription="@string/desc"
+                android:padding="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toTopOf="@+id/tv_praeprozessor"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.555"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ib_insel_arrays"
+                app:srcCompat="@drawable/inselgrau_links" />
 
             <ImageView
                 android:id="@+id/iv_boot1"
