Icon erstellt und Ebenen noch aktualisiert

--- a/app/src/main/res/layout/activity_verloren.xml
+++ b/app/src/main/res/layout/activity_verloren.xml
@@ -11,6 +11,7 @@
         android:id="@+id/tv_verloren"
         android:layout_width="400dp"
         android:layout_height="288dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="19dp"
         android:gravity="center"
         android:text="@string/tv_verloren"
@@ -39,8 +40,8 @@
 
     <ImageView
         android:id="@+id/iv_klabautermann"
-        android:layout_width="354dp"
-        android:layout_height="260dp"
+        android:layout_width="361dp"
+        android:layout_height="308dp"
         android:layout_marginTop="320dp"
         android:layout_marginBottom="38dp"
         android:contentDescription="@string/desc"
@@ -49,6 +50,6 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/glasvollhirn" />
+        app:srcCompat="@drawable/fliegenderhollaender" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
